# Tts_tq

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  autoresearch.ideas.md  autoresearch.jsonl  llms.txt  pyproject.toml  pyrefly.toml  readme_tf.md  ruff.toml
.github/workflows/: ci.yaml
.pi/plan/: baseline-reference.md  comparison-bundle-robustness.md  comparison-followup-hardening.md  tts-lab-pragmatic-improvements.md  tts-lab-workorders.md  wo-001-baseline.md  wo-001-execute-plan-meta.yaml
ADR/: TEMPLATE.md
configs/: aliases.yaml  anchors.yaml
docs/explorer/: 01-arquitectura.md  02-flujo-voice-cloning.md  03-log-errores.md  04-trabajo-en-curso.md  05-qwen-clonado-internals.md  06-testing.md  README.md
docs/research/: o-3a-voice-cloning-alternatives.md
docs/results/: voice-cloning-chilean-experiments-2026-06-23.md
openspec/: project.md
openspec/changes/generation-result-envelope/: apply-progress.md  chained-pr-plan.md  design.md  explore.md  proposal.md  tasks.md  verify-report.md
scripts/: compare_reference_configs.py  generate_clone_fixed.py  generate_clone_h1a.py  generate_clone_h1b.py  generate_clone_h2.py  generate_clone_simple_path.py  generate_clone_xtts.py  generate_clone_xtts_optimized.py  generate_improved_clone.py  generate_pitch_clones.py  generate_voice_case.py  generate_voice_from_pitch.py  generate_voice_matrix.py  measure_speaker_similarity.py  prepare_reference.py  record_reference.sh  record_reference_v2.sh  setup_comfyui.sh  transcribe_experiments.py  transcribe_reference.py  trifecta_manager.sh
src/tts_lab/: __init__.py  cli.py
src/tts_lab/application/: __init__.py  agent_card.py  dto.py  use_cases.py
src/tts_lab/domain/: __init__.py  entities.py  exceptions.py  (+1 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: test_agent_card.py  test_cli.py  test_compare_reference_configs.py  test_comparison_manifest.py  test_config.py  test_defect_repro.py  test_entities.py  test_exceptions.py  test_file_storage.py  test_inworld_client.py  test_protocols.py  test_qwen_client.py  test_reference_bundle.py  test_reference_preparation.py  test_tts_provider.py  test_use_cases.py
(+23 files in other folders)
