[project]
name = "tts-lab"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchaudio",
    "transformers",
    "accelerate",
    "huggingface_hub",
    "librosa",
    "soundfile",
    "typer",
    "rich",
    "pydantic-settings",
    "qwen-tts>=0.1.1",
    "noisereduce>=3.0.3",
    "openai-whisper>=20250625",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",       # Parallel test execution
    "pytest-randomly",    # Random test order
    "pytest-timeout",     # Prevent hanging tests
    "factory-boy",        # Test fixtures
    
    # Linting & Formatting
    "ruff",
    "mypy",
    
    # Security
    "bandit",
    "safety",
    "pip-audit",
    
    # Development tools
    "pre-commit",
    "typer",
    "typer-cli",
]

[project.scripts]
tts = "tts_lab.cli:run_app"
tts-clone = "tts_lab.cli:run_clone"
tts-generate = "tts_lab.cli:run_generate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tts_lab"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (require model download)",
    "integration: marks integration tests",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true
show_column_numbers = true
show_error_context = true
namespace_packages = true
explicit_package_bases = true
cache_dir = ".mypy_cache"
sqlite_cache = true
exclude = ["^\\.venv$", "^\\.git$", "^build$", "^dist$"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["var-annotated", "has-type"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "librosa.*",
    "soundfile.*",
    "huggingface_hub.*",
    "accelerate.*",
    "torchaudio.*",
]
ignore_missing_imports = true
